--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 										<ul class="sub-menu">
 											<li
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-21 current_page_item menu-item-51"><a
-												href="asociacion"><span class="qodef-menu-item-text">
+												href="asociacion.html"><span class="qodef-menu-item-text">
 												La Asociacion
 														</span></a></li>
 
@@ -392,14 +392,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 										<ul class="sub-menu">
 											<li
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1541"><a
-												href="nosotros"><span class="qodef-menu-item-text">Sobre
+												href="nosotros.html"><span class="qodef-menu-item-text">Sobre
 														Nosotros</span></a></li>
 										</ul>
 										
 										<ul class="sub-menu">
 											<li
 												class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1541"><a
-												href="actividades"><span class="qodef-menu-item-text">Documentos
+												href="actividades.html"><span class="qodef-menu-item-text">Documentos
 														</span></a></li>
 										</ul>
 									</div>
